docs-site/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: cortex-docs
spec:
  selector:
    app: cortex-docs
  ports:
    - port: 80
      targetPort: 4321
